# scons-imgui-app

./: .gitignore  README.md  SConstruct  documentation.md
src/: main.cpp
ubuntu/: CMakeLists.txt  SConstruct  build_cmake.sh  build_scons.sh  documentation.md
ubuntu/libs/imgui/: ImCurveEdit.h  ImSequencer.cpp
ubuntu/src/: main.cpp
windows/: CMakeLists.txt  Sconstruct  build_cmake.bat
windows/libs/imgui/: ImSequencer.h  imnodes.cpp
windows/src/: main.cpp
